fix(tab-view): update font color (#1280)
* fix: make tab view item scrollable

* fix: update width

* fix: hide scrollbar

* fix: display scrollbar

* fix: update font color

* fix: remove unwanted css property

* fix: add font weight

* fix: update font weight

--- a/packages/ui/src/assets/css/tab-theme.css
+++ b/packages/ui/src/assets/css/tab-theme.css
@@ -30,8 +30,7 @@
 }
 
 .tabbed-panel > div > button span {
-  color: var(--tab-font-color, #000);
-  font-size: var(--tab-font-size, 1rem);
+  color: var(--dz-secondary-color);
   width: max-content;
 }
 
@@ -48,4 +47,5 @@
 
 .tabbed-panel.top > div > button.active > span {
   color: var(--dz-primary-color);
+  font-weight: 500;
 }
